--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,64 @@
 /*smooth*/
-.module {
-  scroll-behavior: [ auto | smooth ];
 
-}
 
  /*flex*/
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+html, body {
+  font-family: "roboto", sans serif;
+  margin:0;
+  padding:0;
+  scroll-behavior: smooth;
+}
+h2{
+  color:#fff;
+  font-size: 3em;
+  font-family: "roboto", sans serif;
+
+}
+.titre h2{
+  color:#000;
+  font-size: 4em;
+  font-family: "roboto", sans serif;
+
+}
+h2.trouver{
+  padding-left: 10rem;
+transform:rotate(5deg);
+}
+h2.hasard{
+  padding-left: 14rem;
+  transform:rotate(-5deg);
+}
+.et
+{
+  padding-left: 20rem;
+  font-family: "anton", sans serif;
+  font-size: 6rem;
+  color: #fff;
+  transform:rotate(-10deg);
+
 }
 
-html{
-	font-size: 10px;
-	font-family: "Roboto Cn", sans-serif;
-}
 .fullpage {
   display:flex;
   flex-direction: column;
   justify-content:space-between;
-  margin:0 auto;
+  margin:0;
+  padding:0;
   top:0;
   bottom:0;
   left:0;
   right:0;
+  width: 100%;
 }
 .content {
   padding-bottom: 2rem;
 
 }
 .container{
+  margin-top: 30px;
   position: absolute;
+  left:-1200px;
+  z-index:2;
 }
 .boite{
   position: absolute;
@@ -47,6 +75,12 @@ html{
   -webkit-animation: shake-horizontal 0.4s cubic-bezier(0.755, 0.030, 0.515, 0.955) 0.3s 2 both;
   animation: shake-horizontal 0.4s cubic-bezier(0.755, 0.030, 0.515, 0.955) 0.3s 2 both;
 }
+main{
+  margin:0;
+  padding:0;
+
+}
+
 .middle {
   padding-left: 10px;
   padding-top:20px;
@@ -60,22 +94,81 @@ html{
 .sidebar {
   margin:0px;
   padding:0px;
+  width:40rem;
+  align-content: center;
+  text-align: center;
+  box-align: center;
 
 }
 footer {
   padding:0px;
   margin:0px;
-  background-color:#CCCCCC;
+  background-color:#ff0bd1;
   text-align:center;
   height:50px;	
   display:flex;
   flex-direction:column;
   justify-content:center;
 }
+
+section{ 
+  padding: 0px;
+  margin:0px;
+  background-color:#fff;
+}
+
+/* grid*/
+
+.grid-container {
+  text-align: center;
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: "left fo1 fo2 fo3 fo4 fo5" "left fo6 fo7 fo8 fo9 fo10";
+}
+
+.left {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.2fr 1.8fr;
+  grid-template-areas: "titre" "txt";
+  grid-area: left;
+}
+
+.titre { grid-area: titre;
+  padding-top: 0px; 
+  text-align: justify;}
+
+.txt { grid-area: txt; 
+font-size: 2em;
+text-align: left;}
+
+.fo1 { grid-area: fo1; }
+
+.fo2 { grid-area: fo2; }
+
+.fo3 { grid-area: fo3; }
+
+.fo4 { grid-area: fo4; }
+
+.fo5 { grid-area: fo5; }
+
+.fo6 { grid-area: fo6; }
+
+.fo7 { grid-area: fo7; }
+
+.fo8 { grid-area: fo8; }
+
+.fo9 { grid-area: fo9; }
+
+.fo10 { grid-area: fo10; }
+
 /*anim fd*/
 @-webkit-keyframes color-change-2x {
   0% {
     background: #19dcea;
+
   }
   100% {
     background: #b22cff;
@@ -169,11 +262,6 @@ border-width: 2px;
 border-color: #fff;
 background: none;
 }
-#callTOaction:hover{
-  background-position: right center; 
-
-
-}
 button:focus {outline-style:none;
 }
 #cellphone{
@@ -204,442 +292,189 @@ padding-right: 10%;
 width: 25%;
 }
 
-/**
-* Intensifies
-* - Slowly increases in shaking and madness
-*/
-@keyframes intensifies {
-0% {
-  transform: translate(1px, 1px) scale(1);
-}
-1% {
-  transform: translate(-1px, -1px) scale(1.02);
-}
-2% {
-  transform: translate(1px, 2px) scale(1.04);
-}
-3% {
-  transform: translate(-3px, -1px) scale(1.06);
-}
-4% {
-  transform: translate(3px, 3px) scale(1.08);
-}
-5% {
-  transform: translate(-4px, -5px) scale(1.1);
-}
-20% {
-  transform: translate(12px, 7px) scale(1.4);
-}
-21% {
-  transform: translate(-11px, -13px) scale(1.42);
-}
-22% {
-  transform: translate(4px, 22px) scale(1.44);
-}
-23% {
-  transform: translate(-13px, -24px) scale(1.46);
-}
-24% {
-  transform: translate(23px, 5px) scale(1.48);
-}
-25% {
-  transform: translate(-15px, -16px) scale(1.5);
-}
-26% {
-  transform: translate(16px, 7px) scale(1.52);
-}
-27% {
-  transform: translate(-25px, -11px) scale(1.54);
-}
-28% {
-  transform: translate(25px, 20px) scale(1.56);
-}
-29% {
-  transform: translate(-16px, -20px) scale(1.58);
-}
-30% {
-  transform: translate(12px, 23px) scale(1.6);
-}
-31% {
-  transform: translate(-15px, -18px) scale(1.62);
-}
-32% {
-  transform: translate(3px, 27px) scale(1.64);
-}
-33% {
-  transform: translate(-18px, -14px) scale(1.66);
-}
-34% {
-  transform: translate(14px, 9px) scale(1.68);
-}
-35% {
-  transform: translate(-28px, -23px) scale(1.7);
-}
-36% {
-  transform: translate(12px, 30px) scale(1.72);
-}
-37% {
-  transform: translate(-25px, -27px) scale(1.74);
-}
-38% {
-  transform: translate(39px, 1px) scale(1.76);
-}
-39% {
-  transform: translate(-10px, -32px) scale(1.78);
-}
-40% {
-  transform: translate(15px, 35px) scale(1.8);
-}
-41% {
-  transform: translate(-27px, -15px) scale(1.82);
-}
-42% {
-  transform: translate(15px, 41px) scale(1.84);
-}
-43% {
-  transform: translate(-39px, -4px) scale(1.86);
-}
-44% {
-  transform: translate(34px, 19px) scale(1.88);
-}
-45% {
-  transform: translate(-4px, -45px) scale(1.9);
-}
-46% {
-  transform: translate(38px, 7px) scale(1.92);
-}
-47% {
-  transform: translate(-21px, -1px) scale(1.94);
-}
-48% {
-  transform: translate(19px, 6px) scale(1.96);
-}
-49% {
-  transform: translate(-49px, -25px) scale(1.98);
-}
-50% {
-  transform: translate(25px, 25px) scale(2);
-}
-51% {
-  transform: translate(-33px, -24px) scale(2.02);
-}
-52% {
-  transform: translate(45px, 36px) scale(2.04);
-}
-53% {
-  transform: translate(-44px, -7px) scale(2.06);
-}
-54% {
-  transform: translate(30px, 28px) scale(2.08);
-}
-55% {
-  transform: translate(-4px, -27px) scale(2.1);
-}
-56% {
-  transform: translate(17px, 18px) scale(2.12);
-}
-57% {
-  transform: translate(-4px, -12px) scale(2.14);
-}
-58% {
-  transform: translate(1px, 50px) scale(2.16);
-}
-59% {
-  transform: translate(-8px, -36px) scale(2.18);
-}
-60% {
-  transform: translate(29px, 26px) scale(2.2);
-}
-61% {
-  transform: translate(-24px, -21px) scale(2.22);
-}
-62% {
-  transform: translate(60px, 21px) scale(2.24);
-}
-63% {
-  transform: translate(-9px, -36px) scale(2.26);
-}
-64% {
-  transform: translate(44px, 1px) scale(2.28);
-}
-65% {
-  transform: translate(-38px, -40px) scale(2.3);
-}
-66% {
-  transform: translate(42px, 33px) scale(2.32);
-}
-67% {
-  transform: translate(-17px, -45px) scale(2.34);
-}
-100% {
-  transform: translate(0, 0) rotate(0deg);
-}
-
-}
-
 /* 
 animation slide-out-X
 
 */
 @-webkit-keyframes slideoutX {
   0% {
-    -webkit-transform: translateX(500);
-            transform: translateX(500);
+    -webkit-transform: translateX(1000);
+            transform: translateX(1000);
     opacity: 0;
   }
  50% {
-   -webkit-transform: translateX(-1000);
-           transform: translateX(-1000);
+   -webkit-transform: translateX(-500);
+           transform: translateX(-500);
    opacity: 1;
  }
  100% {
-   -webkit-transform: translateX(-2000px);
-           transform: translateX(-2000px);
+   -webkit-transform: translateX(-1000px);
+           transform: translateX(-1000px);
    opacity: 0;
  }
 }
 @keyframes slideoutX {
   0% {
-    -webkit-transform: translateX(500);
-            transform: translateX(500);
+    -webkit-transform: translateX(1000);
+            transform: translateX(1000);
     opacity: 0;
   }
  50% {
-   -webkit-transform: translateX(-1000);
-           transform: translateX(-1000);
+   -webkit-transform: translateX(-500);
+           transform: translateX(-500);
    opacity: 1;
  }
  100% {
-   -webkit-transform: translateX(-2000px);
-           transform: translateX(-2000px);
+   -webkit-transform: translateX(-1000px);
+           transform: translateX(-1000px);
    opacity: 0;
  }
 }
 .slideoutX {
-	-webkit-animation: slideoutX 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-	        animation: slideoutX 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	-webkit-animation: slideoutX 0.3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	        animation: slideoutX 0.3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
-
-
-/*nouveau css pour nav*/
-
-a{
-	text-decoration: none;
-	color: #eee;
+  
+/*  navbar*/
+.navbar {
+  top: 0; 
+  background-color: #5b5864;
+  padding-bottom: 10px;
 }
 
-header{
-	width: 100%;
-	height: 100px;
-	background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.5)), url("https://images.unsplash.com/photo-1523374228107-6e44bd2b524e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80") center no-repeat;
-	background-size: cover;
-	position: relative;
-  overflow: hidden;
-}
-
-.container{
-	max-width: 120rem;
-	width: 90%;
-	margin: 0 auto;
-}
-
-.menu-toggle{
-	position: fixed;
-	top: 2.5rem;
-	right: 2.5rem;
-	color: #eeeeee;
-	font-size: 3rem;
-	cursor: pointer;
-	z-index: 1000;
-	display: none;
-}
-
-nav{
-	padding-top: 5rem;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	text-transform: uppercase;
-	font-size: 1.6rem;
-}
-
-.brand{
-	font-size: 3rem;
-	font-weight: 300;
-	transform: translateX(-100rem);
-	animation: slideIn .5s forwards;
-}
-
-.brand span{
-	color: crimson;
-}
-
-nav ul{
-	display: flex;
-}
-
-nav ul li{
-	list-style: none;
-	transform: translateX(100rem);
-	animation: slideIn .5s forwards;
-}
-
-nav ul li:nth-child(1){
-	animation-delay: 0s;
-}
-
-nav ul li:nth-child(2){
-	animation-delay: .5s;
-}
-
-nav ul li:nth-child(3){
-	animation-delay: 1s;
-}
-
-nav ul li:nth-child(4){
-	animation-delay: 1.5s;
-}
-
-nav ul li a{
-	padding: 1rem 0;
-	margin: 0 3rem;
-	position: relative;
-	letter-spacing: 2px;
-}
-
-nav ul li a:last-child{
-	margin-right: 0;
-}
-
-nav ul li a::before,
-nav ul li a::after{
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 2px;
-	background-color: crimson;
-	left: 0;
-	transform: scaleX(0);
-	transition: all .5s;
-}
-
-nav ul li a::before{
-	top: 0;
-	transform-origin: left;
-}
-
-nav ul li a::after{
-	bottom: 0;
-	transform-origin: right;
-}
-
-.overlay{
-	background-color: rgba(0,0,0,.95);
-	position: fixed;
-	right: 0;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	transition: opacity 650ms;
-	transform: scale(0);
-	opacity: 0;
+.main-nav {
+  
+  list-style-type: none;
   display: none;
 }
 
-nav ul li a:hover::before,
-nav ul li a:hover::after{
-	transform: scaleX(1);
+.nav-links,
+.logo {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.7);
 }
 
-@keyframes slideIn {
-	from{
-
-	}
-	to{
-		transform: translateX(0);
-	}
+.main-nav li {
+  text-align: center;
+  margin: 15px auto;
 }
 
-@media screen and (max-width: 700px){
+.logo {
+  display: inline-block;
+  margin-top: 10px;
+  margin-left: 20px;
+  font-family: "anton", sans serif;
+ letter-spacing: 0.5em;
+}
 
-	.menu-toggle{
-		display: block;
-	}
+.navbar-toggle {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  cursor: pointer;
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 24px;
+}
 
-	nav{
-		padding-top: 0;
-		display: none;
-		flex-direction: column;
-		justify-content: space-evenly;
-		align-items: center;
-		height: 100vh;
-		text-align: center;
-	}
+#chkToggle {
+  display: none;
+}
 
-	nav ul{
-		flex-direction: column;
-	}
+#chkToggle:checked + ul.main-nav {
+  display: block;
+}
 
-	nav ul li{
-		margin-top: 0.5rem;
-    display:block;
-	}
-
-	nav ul li a{
-		margin: 0;
-		font-size: 1rem;
-    padding-bottom:2px;
-    display:block;
-	}
-
-	.brand{
-		font-size: 0.8rem;
-	}
-  
-  .overlay.menu-open,
-  nav.menu-open{
-	  display: flex;
-    display:block;
-	  opacity: 1;
+@media screen and (min-width: 768px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 0;
+    height: 70px;
+    align-items: center;
   }
+
+  #chkToggle:checked + ul.main-nav {
+    display: flex;
+  }
+
+  .main-nav {
+    display: flex;
+    margin-right: 30px;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+
+  .main-nav li {
+    margin: 0;
+  }
+
+  .nav-links {
+    margin-left: 40px;
+  }
+
+  .logo {
+    margin-top: 0;
+  }
+
+  .navbar-toggle {
+    display: none;
+  }
+
+  .logo:hover,
+  .nav-links:hover {
+    color: rgba(255, 255, 255, 1);
+  }
+ 
+ 
+}
+  
   
 }
-/* fin css andrea*/
+.logo {
+font-family: "anton", sans serif;
+display: inline-block;
+font-size: 1.5rem;
+margin-top: 10px;
+margin-left: 20px;
+color: #999;
+}
+
+@media screen and (max-width: 768px) {
+
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+section {
+  padding: 0px;
+}
+
+h2.trouver{
+  padding-left: 3rem;
+transform:rotate(5deg);
+font-size: 1.5em;
+}
+h2.hasard{
+  padding-left: 5rem;
+  transform:rotate(-5deg);
+  font-size: 1.5em;
+}
+.et
+{
+  padding-left: 10rem;
+  font-size: 2rem;
 
   
-  .middle {
-    padding-left: 10px;
-    padding-top:20px;
-    display:flex;
-    justify-content:space-around;
-    flex-wrap: wrap;
-    -webkit-animation: color-change-2x 10s linear infinite alternate both;
-	  animation: color-change-2x 10s linear infinite alternate both;
-  }
-  /*.header {
-  height:50px;
-  background-color: #b22cff;
-  }*/
+}
+.logosecouez{
+  width:150px;
+} 
+
+#callTOaction{
+  font-family: "roboto", sans serif;
+  font-size: 1.2em;
+}
+}
   
-  .sidebar {
-    width:40rem;
-    margin:0px;
-    padding:0px;
-    align-content: center;
-    text-align: center;
-    box-align: center;
-  }
-  .footer {
-    padding:0px;
-    margin:0px;
-    background-color:#CCCCCC;
-    text-align:center;
-    height:2rem;	
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    
-  
-  }
  
