--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,7 @@ header{
 	top: 2.5rem;
 	right: 2.5rem;
 	color: #eeeeee;
-	font-size: 3rem;
+	font-size: 7rem;
 	cursor: pointer;
 	z-index: 1000;
 	display: none;
@@ -463,18 +463,18 @@ nav{
 	text-transform: uppercase;
 	font-size: 1.6rem;
 }
+h1 {
+  color: #eee;
+  font-family: 'anton',sans serif;
+  letter-spacing:5px;
 
+}
 .brand{
 	font-size: 3rem;
 	font-weight: 300;
 	transform: translateX(-100rem);
 	animation: slideIn .5s forwards;
 }
-
-.brand span{
-	color: crimson;
-}
-
 nav ul{
 	display: flex;
 }
@@ -518,7 +518,7 @@ nav ul li a::after{
 	position: absolute;
 	width: 100%;
 	height: 2px;
-	background-color: crimson;
+	background-color: violet;
 	left: 0;
 	transform: scaleX(0);
 	transition: all .5s;
@@ -549,7 +549,8 @@ nav ul li a::after{
 
 nav ul li a:hover::before,
 nav ul li a:hover::after{
-	transform: scaleX(1);
+  transform: scaleX(1);
+  
 }
 
 @keyframes slideIn {
@@ -564,9 +565,19 @@ nav ul li a:hover::after{
 @media screen and (max-width: 700px){
 
 	.menu-toggle{
-		display: block;
+    display: block;
+    margin-right:15px;
+    font-size:60px;
 	}
-
+ a {
+   font-size: 80px;
+ }
+ #text {
+   font-size: 90px;
+ }
+ h1 .brand {
+   display: none;
+ }
 	nav{
 		padding-top: 0;
 		display: none;
@@ -588,13 +599,14 @@ nav ul li a:hover::after{
 
 	nav ul li a{
 		margin: 0;
-		font-size: 1rem;
+		font-size: 2rem;
     padding-bottom:2px;
     display:block;
 	}
 
 	.brand{
-		font-size: 0.8rem;
+    font-size: 7.5rem;
+    display: none;
 	}
   
   .overlay.menu-open,
