--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,7 @@ color: #999;
 .grid-container {
   display: flex;
   flex-wrap: wrap;
+  font-size: 12px;
 }
 section {
   padding: 0px;
@@ -481,4 +482,5 @@ h2.hasard{
   font-family: "roboto", sans serif;
   font-size: 1.2em;
 }
+
 }
