--- a/css/style2.css
+++ b/css/style2.css
@@ -105,19 +105,16 @@ h2.hasard{
   left:-1200px;
   z-index:2;
 }
-.test{
-  display:flex;
-}
 .boite{
   position: absolute;
   padding-left: 18%;
   padding-right: 20%;
   width: fit-content;
-  padding-bottom: 12%;
 }
 .secouezmoi{
   width: fit-content;
- 
+  padding-top: 3rem;
+  padding-bottom: 1rem;
 }
 .personnage1{
   -webkit-animation: shake-horizontal 0.4s cubic-bezier(0.755, 0.030, 0.515, 0.955) 0.3s 2 both;
@@ -175,7 +172,9 @@ section{
 
 .grid-container {
   text-align: center;
+  padding: 2rem;
   display: grid;
+  grid-column-gap: 2em;
   grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas: "left fo1 fo2 fo3 fo4 fo5" "left fo6 fo7 fo8 fo9 fo10";
@@ -187,8 +186,6 @@ section{
   grid-template-rows: 0.2fr 1.8fr;
   grid-template-areas: "titre" "txt";
   grid-area: left;
-  padding-left: 1.3rem;
-  padding-right: 1.3rem;
 }
 
 .titre { grid-area: titre;
@@ -196,7 +193,7 @@ section{
   text-align: justify;}
 
 .txt { grid-area: txt; 
-font-size: 1.8em;
+font-size: 2em;
 text-align: justify;
 -webkit-hyphens: auto;
 -moz-hyphens: auto;
@@ -331,7 +328,7 @@ button:focus {outline-style:none;
 .hand{
   display:flex; 
 }
-#noms{filter: blur(30px);
+#noms{filter: blur(7px);
   font-family: "anton", sans serif;
   font-size: 2.5em;
   color: bisque;
@@ -529,15 +526,11 @@ h2.hasard{
 {
   padding-left: 10rem;
   font-size: 2rem;
-}
-h2.titre{
-  font-size: 14px;
 
   
 }
 .logosecouez{
-  width:100px;
-  display: none;
+  width:150px;
 } 
 
 #callTOaction{
@@ -548,7 +541,7 @@ h2.titre{
   padding-bottom: 0;
 }
 .boite{
-padding-left: 25%;
+padding-left: 22%;
 }
 #noms {
   font-size: 2em;
